draw selected area into map

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
         <table
           id="workTable"
-          class="table table-bordered"
+          class="table table-bordered table-hover"
           style="width: 100% !important"
         >
           <thead>
