--- a/index.html
+++ b/index.html
@@ -110,6 +110,11 @@
 
     <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.3.1/jspdf.umd.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"
+    />
   </head>
   <body>
     <div class="container-fluid">
@@ -136,7 +141,13 @@
                   type="search"
                   placeholder="Search"
                   aria-label="Search"
+                  id="searchInput"
                 />
+                <div
+                  id="autocompleteSuggestions"
+                  class="autocomplete-suggestions"
+                ></div>
+
                 <button class="btn btn-outline-success" type="submit">
                   Search
                 </button>
