--- a/dashboard.html
+++ b/dashboard.html
@@ -185,10 +185,10 @@
 
       <div class="row">
         <!-- Left Sidebar -->
-        <div class="col-md-2">
+        <div class="col-md-2" style="background-color: #bbb;">
           <div class="form-group mt-5">
-            <label>Layers Name (Year Wise)</label>
-            <select class="select2 form-control" multiple="multiple"></select>
+            <label>Select Year</label>
+            <select class="select2 form-control"  multiple="multiple"></select>
           </div>
           <div class="form-group mt-5">
             <label>Layers Name (Amount)</label>
@@ -228,7 +228,7 @@
         </div>
 
         <!-- Right Sidebar -->
-        <div class="col-md-2">
+        <div class="col-md-2" style="background-color: #bbb;">
           <div class="form-group mt-5">
             <label>Amount</label>
             <select class="select2 form-control" multiple="multiple"></select>
