geometry code update

--- a/dashboard.html
+++ b/dashboard.html
@@ -172,7 +172,7 @@
                 ></div>
 
                 <button class="btn btn-outline-success" type="submit">
-                  Search
+                  Clear
                 </button>
               </form>
               <button id="showTableBtn" class="btn btn-outline-secondary ms-2">
