Committing changes before pulling updates

--- a/geometry_page.html
+++ b/geometry_page.html
@@ -158,7 +158,25 @@
    var polyline = L.polyline(coordinates).addTo(map);
    map.fitBounds(polyline.getBounds());
  }
+ // Get the geoJSON parameter from the URL
+    const urlParams = new URLSearchParams(window.location.search);
+    const geoJSONString = urlParams.get('geoJSON');
 
+    // Parse the geoJSONString to obtain the geometry data
+    const geoJSON = JSON.parse(decodeURIComponent(geoJSONString));
+
+    var map = L.map('map').setView([0, 0], 2); // Initialize Leaflet map
+
+    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+        attribution: '© OpenStreetMap contributors'
+    }).addTo(map);
+
+    function showGeometry() {
+        L.geoJSON(geoJSON).addTo(map);
+    }
+
+    // Call showGeometry function when the page loads
+    showGeometry();
     // const markers = [];
 
     // function showCoordinates() {
