--- a/dashboard.html
+++ b/dashboard.html
@@ -189,9 +189,9 @@
           <div class="form-group mt-5">
             <label>Select Year</label>
             <select class="select2 form-control"  multiple="multiple">
-              <option value="">2022-2023</option>
-              <option value="">2023-2024</option>
-              <option value="">2024-2025</option>
+              <option class="select2 form-control value="">2022-2023</option>
+              <option class="select2 form-control value="">2023-2024</option>
+              <option class="select2 form-control value="">2024-2025</option>
 
 
             </select>
