--- a/dashboard.html
+++ b/dashboard.html
@@ -185,17 +185,14 @@
 
       <div class="row">
         <!-- Left Sidebar -->
-        <div class="col-md-2" style="background-color: #bbb;">
+        <div class="col-md-2" style="background-color: #bbb">
           <div class="form-group mt-5">
             <label>Select Year</label>
-            <select class="select2 form-control"  multiple="multiple">
+            <select class="select2 form-control" multiple="multiple">
               <option value="">2022-2023</option>
               <option value="">2023-2024</option>
               <option value="">2024-2025</option>
-
-
             </select>
-           
           </div>
           <div class="form-group mt-5">
             <label>Layers Name (Amount)</label>
@@ -235,7 +232,7 @@
         </div>
 
         <!-- Right Sidebar -->
-        <div class="col-md-2" style="background-color: #bbb;">
+        <div class="col-md-2" style="background-color: #bbb">
           <div class="form-group mt-4">
             <label>Amount</label>
             <select class="select2 form-control" multiple="multiple"></select>
@@ -321,11 +318,21 @@
           select.empty();
 
           $.each(data, function (index, item) {
+            // Manipulate coordinates: swap latitude with longitude and vice versa
+            var coordinates = item.geom
+              .split(",")
+              .map(function (coord) {
+                var parts = coord.trim().split(" ");
+                return parts.reverse().join(" ");
+              })
+              .join(",");
+
             select.append(
               $("<option>", {
                 value: item.fid,
                 text: item.Ward_Office,
-                "data-coordinates": item.geom, // Assuming coordinates are available in the API response
+                "data-coordinates": coordinates, // Reversed coordinates
+                zones: item.Zone,
               })
             );
           });
@@ -367,21 +374,31 @@
           select.on("change", function () {
             var selectedOptions = $(this).find(":selected");
             var selectedCoordinates = [];
+            var selectedZones = [];
 
             selectedOptions.each(function () {
               selectedCoordinates.push($(this).data("coordinates"));
+              selectedZones.push($(this).attr("zones"));
             });
 
             // Use the selected coordinates to draw on the map
             console.log("Selected coordinates:", selectedCoordinates);
+            getSelectedZones(selectedZones);
 
             drawCoordinatesOnMap(selectedCoordinates);
           });
         });
       }
 
-      function loadZones() {
-        $.getJSON("APIS/Zone_layer.php", function (data) {
+      function loadZones(selectedZones = "") {
+        // Construct the API URL with query parameters for selected zones
+        var apiUrl = "APIS/Zone_layer.php";
+        if (selectedZones) {
+          apiUrl += "?selectedZones=" + encodeURIComponent(selectedZones);
+        }
+
+        // Make the API request
+        $.getJSON(apiUrl, function (data) {
           var select = $("#zones");
 
           select.empty();
@@ -396,8 +413,12 @@
             );
           });
 
-          // Trigger change event when the select box is loaded
-          select.trigger("change");
+          // Destroy the existing Select2 instance, if it exists
+          if (select.hasClass("select2-hidden-accessible")) {
+            select.select2("destroy");
+          }
+
+          // Initialize Select2 with the updated options
           select.select2({
             templateResult: function (option) {
               if (!option.id) {
@@ -509,26 +530,72 @@
       }
 
       function loadDepartments() {
-        $.getJSON("API-Responses/all-project-data.json", function (data) {
+        $.getJSON("APIS/Exist_Road.php", function (data) {
           var select = $("#departments");
 
           select.empty();
 
-          $.each(data.data.depData, function (index, item) {
+          $.each(data, function (index, item) {
             select.append(
               $("<option>", {
-                value: item.department_id,
-                text: item.department_name,
+                value: item.OBJECTID,
+                text: item.Road_name,
+                "data-coordinates": item.geom,
               })
             );
           });
 
-          select.select2();
+          // Trigger change event when the select box is loaded
+          select.trigger("change");
+          select.select2({
+            templateResult: function (option) {
+              if (!option.id) {
+                return option.text;
+              }
+
+              var $option = $(
+                '<span class="select2-option"><input type="checkbox" class="select2-option-checkbox" />' +
+                  option.text +
+                  "</span>"
+              );
+              return $option;
+            },
+            templateSelection: function (option) {
+              if (!option.id) {
+                return option.text;
+              }
+
+              return $(
+                '<span class="select2-option"><input type="checkbox" class="select2-option-checkbox" checked />' +
+                  option.text +
+                  "</span>"
+              );
+            },
+            closeOnSelect: false,
+            dropdownParent: select.parent(),
+            multiple: true,
+          });
+
+          // Event listener for change event
+          select.on("change", function () {
+            var selectedOptions = $(this).find(":selected");
+            var selectedCoordinates = [];
+
+            selectedOptions.each(function () {
+              selectedCoordinates.push($(this).data("coordinates"));
+            });
+
+            // Use the selected coordinates to draw on the map
+            console.log("Selected coordinates:", selectedCoordinates);
+
+            drawCoordinatesOnMap(selectedCoordinates);
+          });
         });
       }
 
       function drawCoordinatesOnMap(selectedCoordinates) {
         // Assuming you have a Leaflet map instance named 'map'
+
         // Clear previous layers from the map
         map.eachLayer(function (layer) {
           if (!(layer instanceof L.TileLayer)) {
@@ -537,35 +604,63 @@
         });
 
         // Loop through each set of coordinates and draw them on the map
-        // Loop through each set of coordinates and draw them on the map
         selectedCoordinates.forEach(function (geometry) {
           var type = geometry.type;
           var coordinates = geometry.coordinates;
 
-          if (type === "Polygon") {
-            // For polygons
-            var polygon = L.polygon(coordinates, {
-              color: "red",
-              fillColor: "transparent",
-              fillOpacity: 0.1,
+          coordinates = coordinates.map(function (coord) {
+            return [coord[1], coord[0]]; // Swap longitude and latitude
+          });
+
+          if (type === "Polygon" || type === "MultiPolygon") {
+            // For both polygons and multi-polygons
+            var polygon = L.geoJSON(geometry, {
+              style: function (feature) {
+                return {
+                  color: "red",
+                  fillColor: "transparent",
+                  fillOpacity: 0.1,
+                };
+              },
             }).addTo(map);
 
             // Fit the map bounds to the polygon
             map.fitBounds(polygon.getBounds());
-          } else if (type === "MultiPolygon") {
-            // For multi-polygons
-            coordinates.forEach(function (polygonCoords) {
-              var polygon = L.polygon(polygonCoords, {
-                color: "red",
-                fillColor: "transparent",
-                fillOpacity: 0.1,
-              }).addTo(map);
+          } else if (type === "MultiLineString") {
+            // For both LineString and MultiLineString
+            var polyline = L.geoJSON(geometry, {
+              style: function (feature) {
+                return {
+                  color: "black", // Change color to black for roads
+                  weight: 5, // Increase weight for road-like appearance
+                  dashArray: "10, 10", // Add a dash array for a dashed line appearance
+                };
+              },
+            }).addTo(map);
 
-              // Fit the map bounds to the polygon
-              map.fitBounds(polygon.getBounds());
-            });
+            // Fit the map bounds to the polyline
+            map.fitBounds(polyline.getBounds());
+          } else if (type === "LineString") {
+            // For both LineString and MultiLineString
+            var polyline = L.geoJSON(geometry, {
+              style: function (feature) {
+                return {
+                  color: "blue", // Change color to black for roads
+                  weight: 2, // Increase weight for road-like appearance
+                };
+              },
+            }).addTo(map);
+
+            // Fit the map bounds to the polyline
+            map.fitBounds(polyline.getBounds());
           }
         });
+      }
+
+      function getSelectedZones(selectedZones) {
+        // Convert the array to a Set to remove duplicates
+        const uniqueZones = [...new Set(selectedZones)];
+        loadZones(selectedZones);
       }
     </script>
   </body>
